--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
   <body>
 
- Wednesday Night
+<a href="https://movie-herenuad.com/"> </a>
+<a href="https://fx-jissai-dounano.com/"> </a>
 
 </body>
 </html>
